# living-map

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  README.md  index.html
.github/workflows/: deploy.yml
assets/: index-Cfnibi9L.js  index-CobBBfpA.css
backend/: docker-compose.test.yml  docker-compose.yml
backend/api/: AGENTS.md  Dockerfile  README.md  biome.json  package-lock.json  package.json
backend/ingestion-worker/: .dockerignore  AGENTS.md  CONTEXT.md  Dockerfile  README.md  biome.json  package-lock.json  package.json  tsconfig.json
backend/location-extraction-service/: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  Dockerfile.deps  README.md  docker-compose.yml  pyproject.toml
backend/location-extraction-service/scripts/: annotate_geocoding.py  ci.sh  fix_corpus_offsets.py
backend/location-extraction-service/src/: __init__.py  app.py  disambiguator.py  geocoding.py  models.py  orchestrator.py  pipeline.py  schemas.py
backend/location-extraction-service/src/evaluation/: __init__.py  __main__.py  corpus.py  runner.py
backend/location-extraction-service/src/evaluation/converters/: en_wikiann.py  wikiner_fr.py
backend/location-extraction-service/src/pipeline/: __init__.py  detector.py  extractor.py  nlp_manager.py
backend/location-extraction-service/tests/: conftest.py  test_detector.py  test_disambiguator.py  test_extractor.py  test_geocoder.py  test_nlp_manager.py  test_pipeline_integration.py
backend/location-extraction-service/tests/corpus/: en_edge_cases.json  en_paragraphs.json  en_simple.json  fr_edge_cases.json  fr_paragraphs.json  fr_simple.json
backend/location-extraction-service/tests/integration/: conftest.py  test_api.py  test_batch_job.py  test_evaluation_integration.py  test_nlp_manager.py  test_pipeline_integration.py
backend/location-extraction-service/tests/unit/: test_detector.py  test_disambiguator.py  test_evaluation.py  test_extractor.py  test_geocoding.py
backend/migrations/: 001_create-events-and-sources.js  001_schema.js  002_postgis-geometry.js
backend/mock-feed/: .dockerignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json
design/: README.md
design/architecture/: location-extraction.md  overview.md
design/decisions/: ADR-001-location-extraction-approach.md
docs/: README.md  deployment-guide.md  evaluation.md  glossary.md
docs/architecture/: deployment.md  frontend.md  ingestion-worker-db-schema.md  ingestion-worker.md  location-extraction.md  overview.md  serving-api.md
docs/decisions/: ADR-002-ner-evaluation-protocol.md  ADR-003-ner-pipeline-seam.md  ADR-004-consolidate-pipeline-module.md  ADR-005-text2geo-nan-bug.md  ADR-006-pipeline-architectural-improvements.md  ADR-007-replace-text2geo-with-geonamescache.md  (+16 more)
frontend/: .dockerignore  AGENTS.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
scripts/: format.sh
(+68 files in other folders)
