[project]
name = "location-extraction-service"
version = "0.1.0"
description = "High-throughput NLP service for extracting geographic locations from text"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "spacy>=3.8.0",
    "langdetect>=1.0.9",
    "geonamescache>=3.0.1",
    "python-dotenv>=1.0.0",
    "pycountry>=26.2.16",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "RUF",
    "D",
]
ignore = [
    "E501",
    "D107",
    "D203",
    "D213",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "model_dependent: Requires spaCy models and geonamescache data to be pre-downloaded.",
]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]